--- a/homebanking/templates/layout/layout.html
+++ b/homebanking/templates/layout/layout.html
@@ -33,7 +33,7 @@
     <!--NAV -->
     <header class="header">
       <div class="logo">
-        <img src="../images/logo.png" alt="Logo de la marca" />
+        <img src="../../static/css/logo.png" alt="Logo de la marca" />
       </div>
       <div>
         <div class="profile">
