HECHO EL LOGIN :)))

--- a/homebanking/templates/login/login.html
+++ b/homebanking/templates/login/login.html
@@ -9,7 +9,7 @@
  <div style = "width: 50%; margin:auto">
     {{form|crispy}}
 
-    <button type="submit" class="btn btn-success">Registrate</button>
+    <button type="submit" class="btn btn-success">Iniciar sesion</button>
  </div>
 
     </form>
