--- a/homebanking/templates/layout/layout.html
+++ b/homebanking/templates/layout/layout.html
@@ -26,7 +26,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
 
-    <title>{%block title%}Document {% endblock %}</title>
+    <title>{%block title%} Document {% endblock %}</title>
   </head>
   <body>
     {%block navbar%}
@@ -37,12 +37,17 @@
       </div>
       <div>
         <div class="profile">
-          <span>
-            <img
-              src="#"
-              alt="Profile image"
-            />
-          </span>
+           
+          {% if user.is_authenticated %}
+
+           hola {{user.username}} &nbsp &nbsp <a href="{% url 'cerrar_sesion' %}">cerrar sesion</a>
+
+          {% else %}
+
+          <a href="{% url 'iniciar_sesion' %}">login</a> &nbsp &nbsp <a href= "{% url 'login' %}"> Registrate </a>
+
+          {% endif %}
+
         </div>
       </div>
     </header>
@@ -68,7 +73,7 @@
           <li class="nav-item active">
             <a
               class="nav-link"
-              href="../transacciones-transferencias/transferencias.html"
+              href="#"
               >Transacciones <span class="sr-only">(current)</span></a
             >
           </li>
