--- a/homebanking/templates/prestamos/index.html
+++ b/homebanking/templates/prestamos/index.html
@@ -8,5 +8,6 @@ Prestamos
 {% endblock %}
 
 {%block content%}
+<a href='{% url 'solicitud' %}' class='link-primary'>Solicitar un prestamo</a>
 <h1>Este es el nuevo contenido de Prestamos</h1>
 {% endblock %}
