--- a/homebanking/templates/layout/layout.html
+++ b/homebanking/templates/layout/layout.html
@@ -143,8 +143,55 @@
     <h4>bloque header</h4>
     {% endblock %} {%block content%}
     <h4>bloque contenido</h4>
-    {% endblock %} {%block footer%}
-    <h4>bloque footer</h4>
+    {% endblock %}
+
+
+
+
+    {%block footer%}
+
+<!-- Remove the container if you want to extend the Footer to full width. -->
+
+
+  <footer class="bg-light text-center text-white">
+  <!-- Grid container -->
+
+    <!-- Section: Social media -->
+    <section class="mb-4">
+<!-- Facebook -->
+<a style="color: #3b5998;" href="#!" role="button">
+  <i class="fab fa-facebook-f fa-lg"></i>
+</a>
+
+<!-- Twitter -->
+<a style="color: #55acee;" href="#!" role="button">
+  <i class="fab fa-twitter fa-lg"></i>
+</a>
+
+<!-- Google -->
+<a style="color: #dd4b39;" href="#!" role="button">
+  <i class="fab fa-google fa-lg"></i>
+</a>
+
+<!-- Instagram -->
+<a style="color: #ac2bac;" href="#!" role="button">
+  <i class="fab fa-instagram fa-lg"></i>
+</a>
+    </section>
+    <!-- Section: Social media -->
+
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1);">
+    © 2020 Copyright:
+    <a class="text-white" href="#">ITBANK</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+  
+
+<!-- End of .container -->
     {% endblock %}
   </body>
 </html>
