--- a/homebanking/templates/home/index.html
+++ b/homebanking/templates/home/index.html
@@ -23,8 +23,8 @@
         <a href="#">Of interest</a>
       </div>
       <div class="btns">
-        <a href='{% url 'login' %}' ><button class='signup'type ='button'>Sign up</button><a/>
-        <a href='{% url 'login' %}' ><button class="login" type ='button'>Log in</button><a/>
+        <a href='{% url 'login' %}' ><button class='signup'type ='submit'>Sign up</button><a/>
+        <a href='{% url 'login' %}' ><button class="login" type ='submit'>Log in</button><a/>
       </div>
 
     </nav>
