--- a/homebanking/static/css/h-style.css
+++ b/homebanking/static/css/h-style.css
@@ -355,7 +355,7 @@ button {
 #character1{
   width : 500px;
   height: 500px;
-  background: url('./personajes/101-removebg-preview.png') no-repeat;
+  background: url('../img/personaje1.png') no-repeat;
   background-position: center;
   background-size: cover;
 
@@ -364,7 +364,7 @@ button {
 #character2{
   width : 500px;
   height: 500px;
-  background: url('./personajes/97-removebg-preview.png') no-repeat;
+  background: url('../img/personaje2.png') no-repeat;
   background-position: center;
   background-size: cover;
 
